--- a/clase02/index.html
+++ b/clase02/index.html
@@ -13,12 +13,12 @@
 <body>
     <!-- Encabezado -->
     <header>
-        <img class="logo" src="./img/alura.png" alt="logo" srcset="">
+        <img class="logo" src="./img/LogoMalefisico.png" alt="logo" srcset="">
         <h1>FORMULARIOS</h1>
     </header>
     <!-- Contenedor delcontenido -->
     <div class="contenido">
-        <img class="img-cont" src="./img/form.png" alt="img-form" srcset="">
+        <img class="img-cont" src="./img/jack.png" alt="img-form" srcset="">
         <p>Un Formulario es un documento físico o digital utilizado para recopilar datos de manera estructurada y organizada. Se compone de campos designados donde los usuarios deben ingresar o seleccionar datos específicos, de acuerdo con el propósito del
             formulario. Su objetivo principal es recopilar datos de manera estandarizada y eficiente, facilitando su procesamiento, almacenamiento y análisis posterior. Al seguir una estructura predefinida, ayuda a garantizar que se recopile la información
             correcta y necesaria, reduciendo errores y agilizando el flujo de trabajo. La finalidad de un formulario puede variar ampliamente en función del contexto y la situación. Algunos ejemplos son los registros de clientes, el seguimiento de tareas,
@@ -46,7 +46,7 @@
                 <a href="">Form buscar</a>
             </li>
             <li>
-                <a href="">Form validacion</a>
+                <a href="./forms/validacion.html">Form validacion</a>
             </li>
         </ul>
     </div>
