--- a/clase02/forms/entradas.html
+++ b/clase02/forms/entradas.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Encabezado -->
     <header>
-        <img class="logo" src="../img/alura.png" alt="logo" srcset="">
+        <img class="logo" src="../img/LogoMalefisico.png" alt="logo" srcset="">
         <h1>FORMULARIOS</h1>
     </header>
     <!-- Contenedor delcontenido -->
@@ -43,15 +43,15 @@
                 <label for="">Tipo texto largo</label>
                 <textarea class="textarea" name="" id="" cols="30" rows="10"></textarea>
             </div>
-            <div class="entrada">
-                <label for="">Tipo lista desplegable</label>
-                <section name="select">
-                    <option value="">opcion 1</option>
-                    <option value="">opcion 2</option>
-                    <option value="">opcion 3</option>
-                </section>
+            <div class="entrada desplegable">
+                <label>Tipo lista desplegable</label>
+                <select class="seleccion" name="select">
+                    <option>opcion 1</option>
+                    <option>opcion 2</option>
+                    <option>opcion 3</option>
+                </select>
             </div>
-            <div class="entrada">
+            <div class="entrada cajaver">
                 <label for="">Tipo caja de verificacion</label>
                 <input type="checkbox">
             </div>
@@ -75,19 +75,6 @@
             </div>
         </form>
     </div>
-    <div class="contenido">
-        <img class="img-cont" src="../img/form.png" alt="img-form" srcset="">
-        <p>Un Formulario es un documento físico o digital utilizado para recopilar datos de manera estructurada y organizada. Se compone de campos designados donde los usuarios deben ingresar o seleccionar datos específicos, de acuerdo con el propósito del
-            formulario. Su objetivo principal es recopilar datos de manera estandarizada y eficiente, facilitando su procesamiento, almacenamiento y análisis posterior. Al seguir una estructura predefinida, ayuda a garantizar que se recopile la información
-            correcta y necesaria, reduciendo errores y agilizando el flujo de trabajo. La finalidad de un formulario puede variar ampliamente en función del contexto y la situación. Algunos ejemplos son los registros de clientes, el seguimiento de tareas,
-            la revisión de maquinaria o las encuestas de satisfacción, entre otros. <br><br> Un Formulario es un documento físico o digital utilizado para recopilar datos de manera estructurada y organizada. Se compone de campos designados donde los usuarios
-            deben ingresar o seleccionar datos específicos, de acuerdo con el propósito del formulario. Su objetivo principal es recopilar datos de manera estandarizada y eficiente, facilitando su procesamiento, almacenamiento y análisis posterior. Al
-            seguir una estructura predefinida, ayuda a garantizar que se recopile la información correcta y necesaria, reduciendo errores y agilizando el flujo de trabajo. La finalidad de un formulario puede variar ampliamente en función del contexto
-            y la situación. Algunos ejemplos son los registros de clientes, el seguimiento de tareas, la revisión de maquinaria o las encuestas de satisfacción, entre otros. <br><br> Un Formulario es un documento físico o digital utilizado para recopilar
-            datos de manera estructurada y organizada. Se compone de campos designados donde los usuarios deben ingresar o seleccionar datos específicos, de acuerdo con el propósito del formulario. Su objetivo principal es recopilar datos de manera estandarizada
-            y eficiente, facilitando su procesamiento, almacenamiento y análisis posterior. Al seguir una estructura predefinida, ayuda a garantizar que se recopile la información correcta y necesaria, reduciendo errores y agilizando el flujo de trabajo.
-            La finalidad de un formulario puede variar ampliamente en función del contexto y la situación. Algunos ejemplos son los registros de clientes, el seguimiento de tareas, la revisión de maquinaria o las encuestas de satisfacción, entre otros.</p>
-    </div>
 
     <div class="menu">
         <ul class="lista">
@@ -95,7 +82,7 @@
                 <a href="../index.html">Inicio</a>
             </li>
             <li>
-                <a class="activo" href="./forms/entradas.html">From entradas</a>
+                <a class="activo" href="#">From entradas</a>
             </li>
             <li>
                 <a href="">Form registro</a>
@@ -107,7 +94,7 @@
                 <a href="">Form buscar</a>
             </li>
             <li>
-                <a href="">Form validacion</a>
+                <a href="./validacion.html">Form validacion</a>
             </li>
         </ul>
     </div>
