--- a/RetoFormativo/index.html
+++ b/RetoFormativo/index.html
@@ -9,11 +9,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/_variables.css">
     <title>HOME</title>
 </head>
 <body>
     <header>
-        <img class="logo" src="./imgs/LOGO.png" alt="">
+        <img class="logo" src="./imgs/LOGOO.png" alt="">
         <nav>
             <ul class="navv">
                 <li class="navv_lista"><a class="activo" href="./index.html">HOME</a></li>
@@ -32,7 +33,7 @@
         <div class="blue_label">
             <h2>razones por las que el Blue Label a menudo es elogiado como un elixir</h2>
             <ul>
-                <li>Mezcla Maestra: El Blue Label es una mezcla cuidadosamente elaborada de varios whiskies de malta y grano de distilerías selectas. Los Maestros Mezcladores de Johnnie Walker combinan hábilmente diferentes sabores y características para lograr un perfil de sabor único y equilibrado.</li>
+                <li><br>Mezcla Maestra: El Blue Label es una mezcla cuidadosamente elaborada de varios whiskies de malta y grano de distilerías selectas. Los Maestros Mezcladores de Johnnie Walker combinan hábilmente diferentes sabores y características para lograr un perfil de sabor único y equilibrado.</li>
                 <li>Calidad de los Ingredientes: Los whiskies utilizados en el Blue Label suelen ser de alta calidad y pueden incluir maltas y granos madurados durante largos períodos, lo que aporta complejidad y profundidad a la mezcla.</li>
                 <li>Envejecimiento y Maduración: Parte del atractivo del Blue Label radica en su proceso de envejecimiento, donde los diferentes componentes de la mezcla se maduran en barricas de roble durante períodos prolongados. Esto permite que los sabores se mezclen y evolucionen con el tiempo, dando como resultado un producto final sofisticado.</li>
                 <li>Sabor y Aromas Complejos: Los degustadores a menudo describen el Blue Label como un whisky con una amplia gama de sabores y aromas, que pueden incluir notas de frutas, especias, caramelo, nueces y ahumado. Su complejidad y capas de sabores contribuyen a su reputación.</li>
