--- a/RetoFormativo/validacion.html
+++ b/RetoFormativo/validacion.html
@@ -1,38 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style/style.css">
-    <title>HOME</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./style/validacion-style.css">
+<link rel="stylesheet" href="./style/_variables.css">
+<title>Validación de Edad</title>
 </head>
 <body>
     <header>
-        <img class="logo" src="./imgs/LOGO.png" alt="">
-        <nav>
-            <ul class="navv">
-                <li class="navv_lista"><a href="./index.html">HOME</a></li>
-                <li class="navv_lista"><a class="activo" href="./validacion.html">VALIDACION</a></li>
-                <li class="navv_lista"><a href="./registro.html">REGISTER</a></li>
-                <li class="navv_lista"><a href="./login.html">LOGIN</a></li>
-                <li class="navv_lista"><a href=""><i class="bi bi-search"></i></a></li>
-            </ul>
-        </nav>
+        <img class="logoo" src="./imgs/LOGOO.png" alt="">
+        <h1>Bienvenido</h1>
     </header>
-    <section>
-        <div class="ban">
-            <h1 class="titulo_banner">VIVA COLOMBIA, VIVA FALCAO</h1>
-            <img class="banner" src="./imgs/banner.jpg" alt="">
-        </div>
-        
-    </section>
-    <footer>
+    
+    <p>Por favor, confirma que eres mayor de edad para continuar:</p>
+    <button class="next" id="confirmButton">INGRESA</button>
+    <div class="confEdad">
+        <form id="ageForm">
+            <input class="" type="date" id="birthdate">
+            <button class="next next_edad" type="button" id="submitAge">Verificar Edad</button>
+        </form>
+    </div>
 
-    </footer>
+    <script type="module" src="./js/validacion_mayorDeEdad.js"></script>
 </body>
 </html>
