--- a/RetoFormativo/index.html
+++ b/RetoFormativo/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pathway+Gothic+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/_variables.css">
+    <link rel="stylesheet" href="./style/index-style.css">
     <title>HOME</title>
 </head>
 <body>
