--- a/EjercicioPractico/index.html
+++ b/EjercicioPractico/index.html
@@ -42,5 +42,45 @@
             <li><a href="#">Sistema hoteleria</a></li>
         </ul>
     </nav>
+    <div class="every">
+        <section class="banner_estatico">
+            <h2 class="titulo_banner">¿Quienes somos?</h2>
+            <p class="parrafo_banner">Ofrecemos formación gratuita a millones de colombianos que se benefician con programas técnicos, tecnológicos y complementarios que enfocados en el desarrollo económico, científico y social del país, entran a fortalecer las actividades productivas de las empresas y de la industria, para obtener mejor competitividad y mayores resultados en los diferentes mercados. </p>
+        </section>
+        <div class="contenido">
+            <div class="entidad">
+                <section class="articulo">
+                    <h2>Entidad del estado</h2>
+                    <p>Autorizada por el Estado para invertir en infraestructura necesaria para mejorar el desarrollo social y técnico de los trabajadores en las diferentes regiones, a través de formación profesional integral que logra incorporarse con las metas del Gobierno Nacional, mediante el cubrimiento de las necesidades específicas de recurso humano en las empresas. Por medio de la vinculación al mercado laboral -bien sea como empleado o subempleado-, con grandes oportunidades para el desarrollo empresarial, comunitario y tecnológico. </p>
+                    <img class="img_aprendices" src="./img/aprendices.jpg" alt="">
+                    <p>La Entidad más querida por los colombianos funciona desde su creación en permanente alianza entre el Gobierno, los empresarios y los trabajadores, con el firme propósito de aumentar la capacidad de progreso en Colombia a través del incremento de la productividad en las empresas y regiones, sin dejar de lado la inclusión social, alineados con la política nacional: Más empleo y menos pobreza. Por tal razón, se generan continuamente programas y proyectos de responsabilidad social, empresarial, formación, innovación, internacionalización y transferencia de conocimientos y tecnologías.</p>
+                    <h2>Escudo y Bandera</h2>
+                    <p>El escudo, y la bandera del SENA, fueron diseñados cuando se fundó nuestra institución y reflejan los tres sectores económicos dentro de los cuales operamos:</p>
+                    <li>El piñón, representativo del sector industria.</li>
+                    <li>El caduceo, asociado al de comercio y servicios.</li>
+                    <li>El café, ligado al primario y extractivo.</li>
+                    <img src="./img/escudo.jpg" alt="">
+                </section>
+            </div>
+        </div>
+        <section class="comentarios">
+            <h3>Comentarios</h3>
+            <div class="linea_comentario">
+                <a href="#">Elon Musk</a><br>
+                <time>Agosto 16 del 2023</time><br>
+                <p>messi >>> ronaldo</p>
+            </div>
+            <div class="linea_comentario">
+                <a href="#">Van Halen</a><br>
+                <time>Agosto 01 del 2023</time><br>
+                <p>mala señal</p>
+            </div>
+            <div class="linea_comentario">
+                <a href="#">Del Figaro</a><br>
+                <time>Enero 25 del 2023</time><br>
+                <p>buen servicio, comida buena, hospedaje buena, y sobre todo mujeres buenas</p>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
