--- a/EjercicioPractico/hotelFinal/servicePiscina.html
+++ b/EjercicioPractico/hotelFinal/servicePiscina.html
@@ -25,11 +25,11 @@
         <div class="textos">
             <h1 class="panel_titulo">PISCINA</h1>
             <p class="panel_parrafo">Deja atrás el cansancio del día a día y adquiere esta práctica libre de turco y sauna. Aquí podrás relajar tu sistema nervioso, hidratar tu piel si sufres de resequedad, otorgándole un aspecto fresco y radiante, además de mejorar tu respiración.</p>
-            <button class="panel_boton">Ver mas</button>
+            <a href="#info"><button class="panel_boton">Ver mas</button></a>
         </div>
     </div>
     <div class="explicacion">
-        <h2>INFORMACION</h2>
+        <h2 id="info">INFORMACION</h2>
         <p>Durante la sesión de este baño húmedo podrás eliminar toxinas a través del sudor, activar la circulación sanguínea y limpiar a profundidad los poros de tu rostro, evitando así la aparición de acné.</p>
         <img class="explicacion_imagen" src="./img/piscina2.jpg" alt="">
         <p>Y que mejor si después te relajas con una deliciosa sesión de masajes. ¿Tentador no? No lo pienses más. ¡Te esperamos!</p>
