--- a/EjercicioPractico/hotel/sistema.html
+++ b/EjercicioPractico/hotel/sistema.html
@@ -155,15 +155,15 @@
                     <h2>Enviar mensaje</h2>
                     <div class="info">
                         <label for="">Nombre</label>
-                        <input type="text" name="" id="">
+                        <input class="datoss" type="text" name="" id="">
                     </div>
                     <div class="info">
                         <label for="">Apellido</label>
-                        <input type="text" name="" id="">
+                        <input class="datoss" type="text" name="" id="">
                     </div>
                     <div class="info">
                         <label for="">Email</label>
-                        <input type="email" name="" id="">
+                        <input class="datoss" type="email" name="" id="">
                     </div>
                     <div class="info">
                         <label for="">Mensaje</label>
